# M.E.D.I

./: README.md
MEDA-D/: dokumantasyon.html  dokumantasyon_tkhtmlview.html  dokumantasyon_yerel.html  main.py  requirements.txt  test.py
MEDA-D/Assets/: doc.html
MEDA-D/Config/: settings.ini
MEDA-D/Data/Json/: Data.json  Log.json  Move.json  todayLog.json
MEDA-D/Data/Logs/Daily/: 2025-09-19.json  2025-09-20.json  2025-09-21.json  2025-09-22.json  2025-09-23.json  2025-09-25.json  2025-09-26.json  2025-09-27.json  2025-09-28.json  2025-10-01.json  2025-10-02.json  2025-10-03.json  2025-10-04.json  2025-10-05.json  2025-10-06.json  2025-10-10.json  2025-10-11.json
MEDA-D/Data/Logs/Patients/: Kuzey.json  asdas.json
MEDA-D/Data/Profiles/: Users.json
MEDA-D/Exports/: Kuzey-EXPORTED-2.json  Kuzey-EXPORTED.json
MEDA-D/Lib/: ai.py  docModule.py  error_wizard.py  exerciseApi.py  exerciseGraphicer.py  mailApi.py  socketConn.py
MEDA-H/: Cargo.toml  build.rs
MEDA-H/Data/: User.json
MEDA-H/ai-integration/: ai_model.py
MEDA-H/src/: main.rs
MEDA-H/src/lib/funcs/: mail_recv.rs  mod.rs
MEDA-H/ui/: ai_window.slint  app-window.slint  msgbox.slint  settings.slint  show_content.slint
