[package]
name = "MEDA-H"
version = "0.1.0"
edition = "2024"

[dependencies]
slint = "1.14.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22.1"
pyo3 = { version = "0.20", features = ["auto-initialize"] }
image = "0.24"

imap = "3.0.0-alpha.12"
native-tls = "0.2"
chrono = "0.4"
mailparse = "0.14"
regex = "1"



[build-dependencies]
slint-build = "1.14.1"
